data/derived/sp14/progs/unify/prog1138.ml.out
Characters 61-69:
  wwhile((let helper x = (f x, b=f x) in helper b), b);;
                                         ^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
